--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6FB8C7</color>
-    <color name="colorPrimaryDark">#61A1AE</color>
-    <color name="colorAccent">#FDDCC4</color>
+    <color name="colorPrimary">#39AE9E</color>
+    <!--<color name="colorPrimary">#6FB8C7</color>-->
+    <color name="colorPrimaryDark">@color/colorPrimary</color>
+    <!--<color name="colorPrimaryDark">#61A1AE</color>-->
+    <color name="colorAccent">#E86E25</color>
+    <!--<color name="colorAccent">#FDDCC4</color>-->
 
     <color name="fontPrimary">#000000</color>
     <color name="fontSecondary">#888888</color>
