--- a/app/src/main/res/menu/toolbar.xml
+++ b/app/src/main/res/menu/toolbar.xml
@@ -6,6 +6,7 @@
         android:id="@+id/search"
         android:icon="@mipmap/search"
         android:title="Search"
+        app:actionViewClass="android.support.v7.widget.SearchView"
         app:showAsAction="always" />
 
 </menu>
