--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -4,15 +4,13 @@
         <item
             android:id="@+id/nav_home"
             android:icon="@mipmap/home"
+            android:checked="false"
             android:title="首页" />
 
-    </group>
-
-    <group android:checkableBehavior="none">
         <item
             android:id="@+id/nav_login"
             android:icon="@mipmap/login"
+            android:checked="false"
             android:title="账号" />
-
     </group>
 </menu>
