little fixing by sqs

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -68,7 +68,7 @@
             android:layout_height="0dp"
             android:layout_weight="1" />
 
-        <com.example.heronote.StateButton
+        <com.example.heronote.util.StateButton
             android:id="@+id/button_register"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -100,7 +100,7 @@
             android:layout_height="0dp"
             android:layout_weight="1" />
 
-        <com.example.heronote.StateButton
+        <com.example.heronote.util.StateButton
             android:id="@+id/button_login"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
