--- a/app/src/main/res/values/palette.xml
+++ b/app/src/main/res/values/palette.xml
@@ -2,173 +2,173 @@
 <resources>
 
     <!-- Red / 姨妈红 -->
-    <color name="RedPrimary">#F44336</color>
-    <color name="RedPrimaryLight">#FFCDD2</color>
-    <color name="RedPrimaryDark">#D32F2F</color>
-    <color name="RedAccentLight">#FF8A80</color>
-    <color name="RedAccent">#FF5252</color>
-    <color name="RedAccentDark">#FF1744</color>
+    <color name="redPrimary">#F44336</color>
+    <color name="redPrimaryLight">#FFCDD2</color>
+    <color name="redPrimaryDark">#D32F2F</color>
+    <color name="redAccentLight">#FF8A80</color>
+    <color name="redAccent">#FF5252</color>
+    <color name="redAccentDark">#FF1744</color>
 
     <!-- Pink / 脑残粉 -->
-    <color name="PinkPrimary">#E91E63</color>
-    <color name="PinkPrimaryLight">#F8BBD0</color>
-    <color name="PinkPrimaryDark">#C2185B</color>
-    <color name="PinkAccentLight">#FF80AB</color>
-    <color name="PinkAccent">#FF4081</color>
-    <color name="PinkAccentDark">#F50057</color>
+    <color name="pinkPrimary">#E91E63</color>
+    <color name="pinkPrimaryLight">#F8BBD0</color>
+    <color name="pinkPrimaryDark">#C2185B</color>
+    <color name="pinkAccentLight">#FF80AB</color>
+    <color name="pinkAccent">#FF4081</color>
+    <color name="pinkAccentDark">#F50057</color>
 
     <!-- Purple / 基佬紫 -->
-    <color name="PurplePrimary">#9C27B0</color>
-    <color name="PurplePrimaryLight">#E1BEE7</color>
-    <color name="PurplePrimaryDark">#7B1FA2</color>
-    <color name="PurpleAccentLight">#EA80FC</color>
-    <color name="PurpleAccent">#E040FB</color>
-    <color name="PurpleAccentDark">#D500F9</color>
+    <color name="purplePrimary">#9C27B0</color>
+    <color name="purplePrimaryLight">#E1BEE7</color>
+    <color name="purplePrimaryDark">#7B1FA2</color>
+    <color name="purpleAccentLight">#EA80FC</color>
+    <color name="purpleAccent">#E040FB</color>
+    <color name="purpleAccentDark">#D500F9</color>
 
     <!--Deep Purple-->
-    <color name="DeepPurplePrimary">#673AB7</color>
-    <color name="DeepPurplePrimaryLight">#D1C4E9</color>
-    <color name="DeepPurplePrimaryDark">#512DA8</color>
-    <color name="DeepPurpleAccentLight">#B388FF</color>
-    <color name="DeepPurpleAccent">#7C4DFF</color>
-    <color name="DeepPurpleAccentDark">#651FFF</color>
+    <color name="deepPurplePrimary">#673AB7</color>
+    <color name="deepPurplePrimaryLight">#D1C4E9</color>
+    <color name="deepPurplePrimaryDark">#512DA8</color>
+    <color name="deepPurpleAccentLight">#B388FF</color>
+    <color name="deepPurpleAccent">#7C4DFF</color>
+    <color name="deepPurpleAccentDark">#651FFF</color>
 
     <!--Indigo / 颐堤蓝-->
-    <color name="IndigoPrimary">#3F51B5</color>
-    <color name="IndigoPrimaryLight">#C5CAE9</color>
-    <color name="IndigoPrimaryDark">#303F9F</color>
-    <color name="IndigoAccentLight">#8C9EFF</color>
-    <color name="IndigoAccent">#536DFE</color>
-    <color name="IndigoAccentDark">#3D5AFE</color>
+    <color name="indigoPrimary">#3F51B5</color>
+    <color name="indigoPrimaryLight">#C5CAE9</color>
+    <color name="indigoPrimaryDark">#303F9F</color>
+    <color name="indigoAccentLight">#8C9EFF</color>
+    <color name="indigoAccent">#536DFE</color>
+    <color name="indigoAccentDark">#3D5AFE</color>
 
     <!--Blue / 胖次蓝-->
-    <color name="BluePrimary">#2196F3</color>
-    <color name="BluePrimaryLight">#BBDEFB</color>
-    <color name="BluePrimaryDark">#1976D2</color>
-    <color name="BlueAccentLight">#82B1FF</color>
-    <color name="BlueAccent">#448AFF</color>
-    <color name="BlueAccentDark">#2979FF</color>
+    <color name="bluePrimary">#2196F3</color>
+    <color name="bluePrimaryLight">#BBDEFB</color>
+    <color name="bluePrimaryDark">#1976D2</color>
+    <color name="blueAccentLight">#82B1FF</color>
+    <color name="blueAccent">#448AFF</color>
+    <color name="blueAccentDark">#2979FF</color>
 
     <!--Light Blue-->
-    <color name="LightBluePrimary">#03A9F4</color>
-    <color name="LightBluePrimaryLight">#B3E5FC</color>
-    <color name="LightBluePrimaryDark">#0288D1</color>
-    <color name="LightBlueAccentLight">#80D8FF</color>
-    <color name="LightBlueAccent">#40C4FF</color>
-    <color name="LightBlueAccentDark">#00B0FF</color>
+    <color name="lightBluePrimary">#03A9F4</color>
+    <color name="lightBluePrimaryLight">#B3E5FC</color>
+    <color name="lightBluePrimaryDark">#0288D1</color>
+    <color name="lightBlueAccentLight">#80D8FF</color>
+    <color name="lightBlueAccent">#40C4FF</color>
+    <color name="lightBlueAccentDark">#00B0FF</color>
 
     <!--Cyan / 青-->
-    <color name="CyanPrimary">#00BCD4</color>
-    <color name="CyanPrimaryLight">#B2EBF2</color>
-    <color name="CyanPrimaryDark">#0097A7</color>
-    <color name="CyanAccentLight">#84FFFF</color>
-    <color name="CyanAccent">#18FFFF</color>
-    <color name="CyanAccentDark">#00E5FF</color>
+    <color name="cyanPrimary">#00BCD4</color>
+    <color name="cyanPrimaryLight">#B2EBF2</color>
+    <color name="cyanPrimaryDark">#0097A7</color>
+    <color name="cyanAccentLight">#84FFFF</color>
+    <color name="cyanAccent">#18FFFF</color>
+    <color name="cyanAccentDark">#00E5FF</color>
 
     <!--Teal / 水鸭青-->
-    <color name="TealPrimary">#009688</color>
-    <color name="TealPrimaryLight">#B2DFDB</color>
-    <color name="TealPrimaryDark">#00796B</color>
-    <color name="TealAccentLight">#A7FFEB</color>
-    <color name="TealAccent">#64FFDA</color>
-    <color name="TealAccentDark">#1DE9B6</color>
+    <color name="tealPrimary">#009688</color>
+    <color name="tealPrimaryLight">#B2DFDB</color>
+    <color name="tealPrimaryDark">#00796B</color>
+    <color name="tealAccentLight">#A7FFEB</color>
+    <color name="tealAccent">#64FFDA</color>
+    <color name="tealAccentDark">#1DE9B6</color>
 
     <!--Green / 早苗绿-->
-    <color name="GreenPrimary">#4CAF50</color>
-    <color name="GreenPrimaryLight">#C8E6C9</color>
-    <color name="GreenPrimaryDark">#388E3C</color>
-    <color name="GreenAccentLight">#B9F6CA</color>
-    <color name="GreenAccent">#69F0AE</color>
-    <color name="GreenAccentDark">#00E676</color>
+    <color name="greenPrimary">#4CAF50</color>
+    <color name="greenPrimaryLight">#C8E6C9</color>
+    <color name="greenPrimaryDark">#388E3C</color>
+    <color name="greenAccentLight">#B9F6CA</color>
+    <color name="greenAccent">#69F0AE</color>
+    <color name="greenAccentDark">#00E676</color>
 
     <!--Light Green-->
-    <color name="LightGreenPrimary">#8BC34A</color>
-    <color name="LightGreenPrimaryLight">#DCEDC8</color>
-    <color name="LightGreenPrimaryDark">#689F38</color>
-    <color name="LightGreenAccentLight">#CCFF90</color>
-    <color name="LightGreenAccent">#B2FF59</color>
-    <color name="LightGreenAccentDark">#76FF03</color>
+    <color name="lightGreenPrimary">#8BC34A</color>
+    <color name="lightGreenPrimaryLight">#DCEDC8</color>
+    <color name="lightGreenPrimaryDark">#689F38</color>
+    <color name="lightGreenAccentLight">#CCFF90</color>
+    <color name="lightGreenAccent">#B2FF59</color>
+    <color name="lightGreenAccentDark">#76FF03</color>
 
     <!--Lime / 青柠-->
-    <color name="LimePrimary">#CDDC39</color>
-    <color name="LimePrimaryLight">#F0F4C3</color>
-    <color name="LimePrimaryDark">#AFB42B</color>
-    <color name="LimeAccentLight">#F4FF81</color>
-    <color name="LimeAccent">#EEFF41</color>
-    <color name="LimeAccentDark">#C6FF00</color>
+    <color name="limePrimary">#CDDC39</color>
+    <color name="limePrimaryLight">#F0F4C3</color>
+    <color name="limePrimaryDark">#AFB42B</color>
+    <color name="limeAccentLight">#F4FF81</color>
+    <color name="limeAccent">#EEFF41</color>
+    <color name="limeAccentDark">#C6FF00</color>
 
     <!--Yellow / 咸蛋黄-->
-    <color name="YellowPrimary">#FFEB3B</color>
-    <color name="YellowPrimaryLight">#FFF9C4</color>
-    <color name="YellowPrimaryDark">#FBC02D</color>
-    <color name="YellowAccentLight">#FFFF8D</color>
-    <color name="YellowAccent">#FFFF00</color>
-    <color name="YellowAccentDark">#FFEA00</color>
+    <color name="yellowPrimary">#FFEB3B</color>
+    <color name="yellowPrimaryLight">#FFF9C4</color>
+    <color name="yellowPrimaryDark">#FBC02D</color>
+    <color name="yellowAccentLight">#FFFF8D</color>
+    <color name="yellowAccent">#FFFF00</color>
+    <color name="yellowAccentDark">#FFEA00</color>
 
     <!--Amber / 琥珀-->
-    <color name="AmberPrimary">#FFC107</color>
-    <color name="AmberPrimaryLight">#FFECB3</color>
-    <color name="AmberPrimaryDark">#FFA000</color>
-    <color name="AmberAccentLight">#FFE57F</color>
-    <color name="AmberAccent">#FFD740</color>
-    <color name="AmberAccentDark">#FFC400</color>
+    <color name="amberPrimary">#FFC107</color>
+    <color name="amberPrimaryLight">#FFECB3</color>
+    <color name="amberPrimaryDark">#FFA000</color>
+    <color name="amberAccentLight">#FFE57F</color>
+    <color name="amberAccent">#FFD740</color>
+    <color name="amberAccentDark">#FFC400</color>
 
     <!--Orange / 伊藤橙-->
-    <color name="OrangePrimary">#FF9800</color>
-    <color name="OrangePrimaryLight">#FFE0B2</color>
-    <color name="OrangePrimaryDark">#F57C00</color>
-    <color name="OrangeAccentLight">#FFD180</color>
-    <color name="OrangeAccent">#FFAB40</color>
-    <color name="OrangeAccentDark">#FF9100</color>
+    <color name="orangePrimary">#FF9800</color>
+    <color name="orangePrimaryLight">#FFE0B2</color>
+    <color name="orangePrimaryDark">#F57C00</color>
+    <color name="orangeAccentLight">#FFD180</color>
+    <color name="orangeAccent">#FFAB40</color>
+    <color name="orangeAccentDark">#FF9100</color>
 
     <!--Deep Orange-->
-    <color name="DeepOrangePrimary">#FF5722</color>
-    <color name="DeepOrangePrimaryLight">#FFCCBC</color>
-    <color name="DeepOrangePrimaryDark">#E64A19</color>
-    <color name="DeepOrangeAccentLight">#FF9E80</color>
-    <color name="DeepOrangeAccent">#FF6E40</color>
-    <color name="DeepOrangeAccentDark">#FF3D00</color>
+    <color name="deepOrangePrimary">#FF5722</color>
+    <color name="deepOrangePrimaryLight">#FFCCBC</color>
+    <color name="deepOrangePrimaryDark">#E64A19</color>
+    <color name="deepOrangeAccentLight">#FF9E80</color>
+    <color name="deepOrangeAccent">#FF6E40</color>
+    <color name="deepOrangeAccentDark">#FF3D00</color>
 
     <!--Brown / 古铜棕-->
-    <color name="BrownPrimary">#795548</color>
-    <color name="BrownPrimaryLight">#D7CCC8</color>
-    <color name="BrownPrimaryDark">#5D4037</color>
-    <color name="BrownAccentLight">#A1887F</color>
-    <color name="BrownAccent">#5D4037</color>
-    <color name="BrownAccentDark">#3E2723</color>
+    <color name="brownPrimary">#795548</color>
+    <color name="brownPrimaryLight">#D7CCC8</color>
+    <color name="brownPrimaryDark">#5D4037</color>
+    <color name="brownAccentLight">#A1887F</color>
+    <color name="brownAccent">#5D4037</color>
+    <color name="brownAccentDark">#3E2723</color>
 
     <!--Grey-->
-    <color name="GreyPrimary">#9E9E9E</color>
-    <color name="GreyPrimaryLight">#F5F5F5</color>
-    <color name="GreyPrimaryDark">#616161</color>
-    <color name="GreyAccentLight">#E0E0E0</color>
-    <color name="GreyAccent">#616161</color>
-    <color name="GreyAccentDark">#212121</color>
+    <color name="greyPrimary">#9E9E9E</color>
+    <color name="greyPrimaryLight">#F5F5F5</color>
+    <color name="greyPrimaryDark">#616161</color>
+    <color name="greyAccentLight">#E0E0E0</color>
+    <color name="greyAccent">#616161</color>
+    <color name="greyAccentDark">#212121</color>
 
     <!--Blue Grey / 低调灰-->
-    <color name="BlueGreyPrimary">#607D8B</color>
-    <color name="BlueGreyPrimaryLight">#CFD8DC</color>
-    <color name="BlueGreyPrimaryDark">#455A64</color>
-    <color name="BlueGreyAccentLight">#90A4AE</color>
-    <color name="BlueGreyAccent">#455A64</color>
-    <color name="BlueGreyAccentDark">#263238</color>
+    <color name="blueGreyPrimary">#607D8B</color>
+    <color name="blueGreyPrimaryLight">#CFD8DC</color>
+    <color name="blueGreyPrimaryDark">#455A64</color>
+    <color name="blueGreyAccentLight">#90A4AE</color>
+    <color name="blueGreyAccent">#455A64</color>
+    <color name="blueGreyAccentDark">#263238</color>
 
     <!--高端黑-->
-    <color name="Black">#000000</color>
+    <color name="black">#000000</color>
     <!--三分之二灰-->
-    <color name="Grey66">#555555</color>
+    <color name="grey66">#555555</color>
     <!--半灰-->
-    <color name="Grey">#808080</color>
+    <color name="grey">#808080</color>
     <!--三分之一灰-->
-    <color name="Grey33">#AAAAAA</color>
+    <color name="grey33">#AAAAAA</color>
     <!--今夜白-->
-    <color name="White">#ffffff</color>
+    <color name="white">#ffffff</color>
 
     <!--全透明-->
-    <color name="Transparent">#00000000</color>
+    <color name="transparent">#00000000</color>
     <!--半黑遮罩-->
-    <color name="DarkShade">#80000000</color>
+    <color name="darkShade">#80000000</color>
     <!--半白遮罩-->
-    <color name="LightShade">#80ffffff</color>
+    <color name="lightShade">#80ffffff</color>
 
 </resources>
