--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,6 +39,8 @@
             android:id="@+id/view_pager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:padding="6dp"
+            android:background="#EEEEEE"
             app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
         <android.support.design.widget.FloatingActionButton
@@ -47,7 +49,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
             android:layout_margin="24dp"
-            android:src="@mipmap/pencil" />
+            android:src="@mipmap/pencil"
+            app:layout_behavior="com.example.heronote.util.FABBehavior" />
 
     </android.support.design.widget.CoordinatorLayout>
 
