--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,7 +50,7 @@
             android:layout_gravity="bottom|end"
             android:layout_margin="24dp"
             android:src="@mipmap/pencil"
-            app:layout_behavior="com.example.heronote.util.FABBehavior" />
+            app:layout_behavior="com.example.heronote.util.ScrollAwareFABBehavior" />
 
     </android.support.design.widget.CoordinatorLayout>
 
