--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -4,13 +4,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/grey_200"
     android:fitsSystemWindows="true">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
         android:layout_height="120dp"
-        android:fitsSystemWindows="true"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <android.support.design.widget.CollapsingToolbarLayout
@@ -63,22 +63,20 @@
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/grey_200"
-        android:padding="6dp"
+        android:layout_margin="6dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="6dp">
+            android:layout_height="match_parent">
 
             <TextView
                 android:id="@+id/date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginBottom="12dp"
+                android:layout_margin="6dp"
                 android:textSize="18sp"
                 android:textColor="@color/textPrimary" />
 
@@ -120,39 +118,38 @@
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="12dp"
+                android:layout_margin="6dp"
                 app:cardCornerRadius="6dp">
 
-                <LinearLayout
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:layout_height="wrap_content">
 
                     <ImageView
                         android:id="@+id/cover"
                         android:layout_width="match_parent"
-                        android:layout_height="187dp"
-                        android:background="@android:color/black"
-                        android:scaleType="fitCenter"
-                        android:src="@drawable/img_1" />
+                        android:layout_height="189dp"
+                        android:scaleType="fitCenter" />
 
                     <TextView
                         android:id="@+id/slogan"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginTop="12dp"
-                        android:textColor="@color/fontPrimary"
-                        android:textSize="20dp" />
+                        android:layout_below="@id/cover"
+                        android:layout_margin="12dp"
+                        android:textColor="@color/textPrimary"
+                        android:textSize="20sp" />
 
                     <TextView
                         android:id="@+id/hero"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_margin="12dp"
-                        android:layout_gravity="end" />
+                        android:layout_below="@id/slogan"
+                        android:layout_alignEnd="@id/slogan"
+                        android:layout_alignRight="@id/slogan"
+                        android:layout_marginBottom="12dp"/>
 
-                </LinearLayout>
+                </RelativeLayout>
 
             </android.support.v7.widget.CardView>
 
@@ -163,6 +160,7 @@
                 <!--app:cardCornerRadius="4dp">-->
 
             <TextView
+                android:layout_margin="6dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/longText" />
