--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -9,54 +9,15 @@
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:fitsSystemWindows="true"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+        android:layout_height="wrap_content"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:elevation="0dp">
 
-        <android.support.design.widget.CollapsingToolbarLayout
-            android:id="@+id/collapsing_toolbar"
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fitsSystemWindows="true"
-            app:title="行动派の小阿宅"
-            app:contentScrim="?attr/colorPrimary"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
-            app:collapsedTitleGravity="left"
-            app:expandedTitleGravity="left|bottom"
-            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Title"
-            app:expandedTitleMarginStart="20dp"
-            app:expandedTitleMarginBottom="20dp">
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/colorPrimary"/>
-            <!--
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/img_2"
-                android:scaleType="centerCrop"
-                android:fitsSystemWindows="true"
-                app:layout_collapseMode="parallax" />-->
-
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-                app:layout_collapseMode="pin">
-
-                <de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/circleImageView"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_marginRight="12dp"
-                    android:src="@drawable/nav_icon"/>
-
-            </android.support.v7.widget.Toolbar>
-
-        </android.support.design.widget.CollapsingToolbarLayout>
+            android:layout_height="?attr/actionBarSize"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
     </android.support.design.widget.AppBarLayout>
 
@@ -84,7 +45,7 @@
                     android:gravity="bottom"
                     android:text="22"
                     android:textSize="32sp"
-                    android:textColor="@color/fontPrimary"/>
+                    android:textColor="@color/textPrimary"/>
 
                 <TextView
                     android:id="@+id/time"
@@ -94,7 +55,7 @@
                     android:gravity="bottom"
                     android:text="2017.12  ·  14:30  ·  星期五"
                     android:textSize="12sp"
-                    android:textColor="@color/fontSecondary" />
+                    android:textColor="@color/textPrimary" />
             </LinearLayout>
 
             <View
@@ -106,7 +67,7 @@
                 android:background="#90909090" />
 
             <ImageView
-                android:id="@+id/imageView"
+                android:id="@+id/cover_pic"
                 android:layout_width="match_parent"
                 android:layout_height="240dp"
                 android:background="@android:color/black"
@@ -126,14 +87,16 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:id="@+id/quote"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_margin="10dp"
                         android:text="“我必须付出超出常人数倍的努力啊！”"
-                        android:textColor="@color/fontPrimary"
+                        android:textColor="@color/textPrimary"
                         android:textSize="20dp" />
 
                     <TextView
+                        android:id="@+id/quote_from"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginRight="10dp"
@@ -144,19 +107,14 @@
                 </LinearLayout>
             </android.support.v7.widget.CardView>
 
-            <android.support.v7.widget.CardView
+            <com.sendtion.xrichtext.RichTextView
+                android:id="@+id/content"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="15dp"
-                app:cardCornerRadius="4dp">
+                android:layout_margin="10dp"
+                android:textSize="16sp"
+                android:textColor="@color/textPrimary" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
-                    android:text="是的JFK使得开发商的肌肤的就是房价肯定是附近看看附件是的飞机迪斯科解放的是开发付款的积分多少JFK酒店房间定界符独守空房的开发技术框架的飞机迪斯科解放看电视剧是单价为哦炯然就饿温热我认为哦软件为哦家里反对司法鉴定所靓女你的淑女了的少女放开来的v你的女裤休闲女裤联系处女下次就看了都是风景剩女了看你下次vv低利率了重新考虑考虑你问哦冏了我就是的JFK使得开发商的肌肤的就是房价肯定是附近看看附件是的飞机迪斯科解放的是开发付款的积分多少JFK酒店房间定界符独守空房的开发技术框架的飞机迪斯科解放看电视剧是单价为哦炯然就饿温热我认为哦软件为哦家里反对司法鉴定所靓女你的淑女了的少女放开来的v你的女裤休闲女裤联系处女下次就看了都是风景剩女了看你下次vv低利率了重新考虑考虑你问哦冏了我就是的JFK使得开发商的肌肤的就是房价肯定是附近看看附件是的飞机迪斯科解放的是开发付款的积分多少JFK酒店房间定界符独守空房的开发技术框架的飞机迪斯科解放看电视剧是单价为哦炯然就饿温热我认为哦软件为哦家里反对司法鉴定所靓女你的淑女了的少女放开来的v你的女裤休闲女裤联系处女下次就看了都是风景剩女了看你下次vv低利率了重新考虑考虑你问哦冏了我就是的JFK使得开发商的肌肤的就是房价肯定是附近看看附件是的飞机迪斯科解放的是开发付款的积分多少JFK酒店房间定界符独守空房的开发技术框架的飞机迪斯科解放看电视剧是单价为哦炯然就饿温热我认为哦软件为哦家里反对司法鉴定所靓女你的淑女了的少女放开来的v你的女裤休闲女裤联系处女下次就看了都是风景剩女了看你下次vv低利率了重新考虑考虑你问哦冏了我就是的JFK使得开发商的肌肤的就是房价肯定是附近看看附件是的飞机迪斯科解放的是开发付款的积分多少JFK酒店房间定界符独守空房的开发技术框架的飞机迪斯科解放看电视剧是单价为哦炯然就饿温热我认为哦软件为哦家里反对司法鉴定所靓女你的淑女了的少女放开来的v你的女裤休闲女裤联系处女下次就看了都是风景剩女了看你下次vv低利率了重新考虑考虑你问哦冏了我就"/>
-
-            </android.support.v7.widget.CardView>
         </LinearLayout>
 
     </android.support.v4.widget.NestedScrollView>
