--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -1,43 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp"
-    app:cardCornerRadius="4dp"
-    app:cardBackgroundColor="@android:color/white">
+    android:layout_margin="6dp"
+    app:cardBackgroundColor="@color/White"
+    app:cardCornerRadius="6dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="4dp"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="52dp"
+            android:layout_height="wrap_content"
             android:gravity="center_vertical"
-            android:orientation="horizontal">
+            android:layout_margin="4dp">
 
             <TextView
-                android:id="@+id/date"
+                android:id="@+id/day_of_month"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="12dp"
+                android:layout_marginEnd="12dp"
+                android:layout_marginRight="12dp"
                 android:text="22"
                 android:textSize="30sp"
                 android:textColor="@color/textPrimary"/>
 
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginLeft="12dp">
+                android:layout_height="wrap_content">
 
                 <TextView
-                    android:id="@+id/day"
+                    android:id="@+id/month_year"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="星期五"
+                    android:text="02-2018"
+                    android:textSize="12sp"
+                    android:textColor="@color/textSecondary" />
+
+                <TextView
+                    android:id="@+id/day_of_week"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="6dp"
+                    android:layout_marginRight="6dp"
+                    android:layout_below="@id/month_year"
+                    android:text="周六"
                     android:textSize="12sp"
                     android:textColor="@color/textSecondary" />
 
@@ -45,11 +57,14 @@
                     android:id="@+id/time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="2017.12   14:30"
+                    android:layout_alignTop="@id/day_of_week"
+                    android:layout_toRightOf="@id/day_of_week"
+                    android:layout_toEndOf="@id/day_of_week"
+                    android:text="23:36"
                     android:textSize="12sp"
                     android:textColor="@color/textSecondary" />
 
-            </LinearLayout>
+            </RelativeLayout>
 
             <View
                 android:layout_width="0dp"
@@ -57,32 +72,65 @@
                 android:layout_weight="1" />
 
             <Button
-                android:id="@+id/more"
+                android:id="@+id/button_more"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:layout_marginRight="10dp"
-                android:background="@mipmap/more" />
+                android:background="@mipmap/more"
+                android:alpha="0.867"/>
 
         </LinearLayout>
 
-        <ImageView
-            android:id="@+id/img"
+        <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="180dp"
-            android:src="@drawable/img_1"
-            android:scaleType="centerCrop" />
+            android:layout_height="wrap_content"
+            android:layout_margin="4dp"
+            app:cardCornerRadius="6dp">
 
-        <TextView
-            android:id="@+id/quote"
+            <ImageView
+                android:id="@+id/cover"
+                android:layout_width="match_parent"
+                android:layout_height="180dp"
+                android:src="@drawable/img_1"
+                android:scaleType="centerCrop" />
+
+        </android.support.v7.widget.CardView>
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="32dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:gravity="center_vertical"
-            android:text="“我必须付出超出常人数倍的努力啊！”"
-            android:textColor="@color/textPrimary"
-            android:textSize="15sp"
-            android:singleLine="true"
-            android:ellipsize="end" />
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp">
+
+            <ImageView
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:gravity="top"
+                android:alpha="0.867"
+                android:src="@drawable/front_quote" />
+
+            <TextView
+                android:id="@+id/quote"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginLeft="6dp"
+                android:layout_marginRight="6dp"
+                android:layout_gravity="center"
+                android:text="AAA"
+                android:textColor="@color/textPrimary"
+                android:textSize="15sp"
+                android:textAlignment="center"
+                android:maxLines="3"
+                android:ellipsize="end" />
+
+            <ImageView
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:layout_gravity="bottom"
+                android:alpha="0.867"
+                android:src="@drawable/back_quote" />
+
+        </LinearLayout>
+
     </LinearLayout>
+
 </android.support.v7.widget.CardView>
