--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -81,9 +81,9 @@
                     <ImageView
                         android:id="@+id/cover"
                         android:layout_width="match_parent"
-                        android:layout_height="189dp"
-                        android:src="@drawable/img_1"
-                        android:scaleType="fitCenter" />
+                        android:layout_height="wrap_content"
+                        android:adjustViewBounds="true"
+                        android:src="@drawable/img_1" />
 
                     <TextView
                         android:id="@+id/quote"
